cmake_minimum_required(VERSION 3.25)

if(NOT CMAKE_BUILD_TOOL)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 26)

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE})

message(STATUS RUNTIME_OUTPUT: ${CMAKE_RUNTIME_OUTPUT_${CMAKE_BUILD_TYPE}})
message(STATUS ARCHIVE_OUTPUT: ${CMAKE_ARCHIVE_OUTPUT_${CMAKE_BUILD_TYPE}})
message(STATUS LIB_OUTPUT: ${CMAKE_LIBRARY_OUTPUT_${CMAKE_BUILD_TYPE}})

enable_testing()

project(CMAKE_TEMPLATE_PROJECT)

add_subdirectory(test)
add_subdirectory(src)



